# sherlock.lv2

./: .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md  VERSION  atom.c  atom_inspector.c  atom_inspector_eo.c  atom_inspector_nk.c  atom_inspector_ui.c  atom_ui.c  common.h  docker_build.sh  docker_run.sh  encoder.h  encoder.l  forge.h  lv2-osc.doap.ttl  lv2_eo_ui.h  lv2_osc.h  manifest.ttl  manifest.ttl.in  meson.build  midi_inspector.c  midi_inspector_eo.c  midi_inspector_nk.c  midi_inspector_ui.c  nk_pugl.h  nuklear.h  osc.h  osc.ttl  osc_inspector.c  osc_inspector_eo.c  osc_inspector_nk.c  osc_inspector_ui.c  osc_test.c  props.h  reader.h  sandbox_efl.c  (+14 more)
cmake/: arm-linux-gnueabihf.cmake  i686-linux-gnu.cmake  i686-w64-mingw32.cmake  universal-apple-darwin.cmake  x86_64-linux-gnu.cmake  x86_64-w64-mingw32.cmake
eo_ui.lv2/: CMakeLists.txt  lv2_eo_ui.h  manifest.ttl
eo_ui.lv2/test/: eo.c
meson/: arm-linux-gnueabihf  i686-linux-gnu  i686-w64-mingw32  universal-apple-darwin  x86_64-linux-gnu  x86_64-w64-mingw32
nk_pugl/: nk_pugl.h
nuklear/: nuklear.h
osc.lv2/: .gitlab-ci.yml  README.md  endian.h  lv2_osc.h  manifest.ttl  meson.build  osc.h  osc.ttl  osc_test.c  reader.h  stream.h  util.h  writer.h
osc.lv2/osc.lv2/: endian.h  forge.h  reader.h  stream.h  util.h  writer.h
osc.lv2/test/: Makefile  osc_test.c
props.lv2/: .gitlab-ci.yml  CMakeLists.txt  props.h
props.lv2/meson/: arm-linux-gnueabihf
props.lv2/test/: props.c
pugl/: pugl.hpp  pugl_internal.h  pugl_osx.m  pugl_x11.c
pugl/pugl/: pugl.h  pugl_osx.m  pugl_win.cpp  pugl_x11.c
sandbox_ui.lv2/: README.md  sandbox_io.h  sandbox_master.h  sandbox_slave.c  sandbox_slave.h  sandbox_ui.c  sandbox_ui.h
ser_atom.lv2/: ser_atom.h
ser_atom.lv2/ser_atom.lv2/: ser_atom.h
ser_atom.lv2/test/: Makefile  ser_atom_test.c
test/: Makefile  eo.ttl  eo_ui.c  manifest.ttl.in  osc.c  osc.ttl  osc_test.c  props.c  props.ttl
